--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
           <article class="plot">
             <p class="dwarf caps">이 수업 어때요?</p>
             <h2><em class="mod-frame">How is the Class?</em></h2>
-            <DIV id="In_1" style="DISPLAY: block"><SPAN style="FONT-SIZE: 9pt; CURSOR: hand; COLOR: #0482d6" onclick="In_1.style.display='none';Out_1.style.display='block'"><U><img src ="https://d30y9cdsu7xlg0.cloudfront.net/png/16583-200.png"></U></SPAN></DIV>
-            <DIV id="Out_1" style="DISPLAY: none"><SPAN style="FONT-SIZE: 9pt; CURSOR: hand; COLOR: #0482d6" onclick="In_1.style.display='block';Out_1.style.display='none'"><U><img src ="https://d30y9cdsu7xlg0.cloudfront.net/png/16583-200.png"></U></SPAN> 
+            <DIV id="In_1" style="DISPLAY: block"><SPAN style="FONT-SIZE: 9pt; CURSOR: hand; COLOR: #0482d6" onclick="In_1.style.display='none';Out_1.style.display='block'"><U><img src ="https://lh3.googleusercontent.com/cdJSVMxGcOgU4ck2j276K3tKIKdkdqAbtzta_NFyXA=w-20-h-20-p-no"></U></SPAN></DIV>
+            <DIV id="Out_1" style="DISPLAY: none"><SPAN style="FONT-SIZE: 9pt; CURSOR: hand; COLOR: #0482d6" onclick="In_1.style.display='block';Out_1.style.display='none'"><U><img src ="https://lh3.googleusercontent.com/cdJSVMxGcOgU4ck2j276K3tKIKdkdqAbtzta_NFyXA=w-20-h-20-p-no"></U></SPAN> 
             <P><SPAN style="FONT-SIZE: 9pt">
               <div id="disqus_thread"></div>
 <script type="text/javascript">
